# ParaToric

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
cmake/: paratoricConfig.cmake.in
include/paratoric/mcmc/: extended_toric_code.hpp  extended_toric_code_c.h
include/paratoric/types/: types.hpp
python/: pyproject.toml
python/bindings/: CMakeLists.txt  py_extended_toric_code.cpp
python/cli/: job_handler.py  paratoric.py
python/paratoric/: __init__.py  __main__.py  _paratoric.pyi
scripts/: job_script_creator.ipynb
src/cli/: paratoric.cpp
src/io/: io.cpp  io.hpp
src/lattice/: lattice.cpp  lattice.hpp
src/mcmc/: extended_toric_code.cpp  extended_toric_code_c.cpp  extended_toric_code_qmc.hpp
src/rng/: rng.hpp
src/statistics/: autocorrelation.hpp  bootstrap.hpp
tests/: CMakeLists.txt  test_extended_toric_code_qmc.cpp  test_lattice.cpp
tests/lattice/: test_lattice.cpp
tests/mcmc/: test_extended_toric_code_qmc.cpp
